Left align fix

--- a/assets/css/async-overview.css
+++ b/assets/css/async-overview.css
@@ -4,8 +4,4 @@
 .reveal .slides {
     text-align: left;
 }
-.reveal .slides section>* {
-    margin-left: 0;
-    margin-right: 0;
-}
 
